--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "enzo prina",
+      "package": "com.enzoprina9.pokedex",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
